Modified the index.html file
This way I could practice doing a git push with origin(remote) main(branch)

--- a/odin-links-and-images/index.html
+++ b/odin-links-and-images/index.html
@@ -12,5 +12,6 @@
         <a href="./pages/about.html">About</a>
         <!-- <img src="./charlesdeluvio-Mv9hjnEUHR4-unsplash.jpg"> -->
         <a href="./pages/lists.html">Top Lists</a>
+        <p>This is just some <strong><em>example text fool</em></strong>!</p>
     </body>
 </html>
